--- a/index.html
+++ b/index.html
@@ -94,8 +94,7 @@
 					<div class="watching-item"><!--Movie Night-->
 						<h2 class="section-heading">Movie Night Plans</h2>
 						<div class="tiled-list scrolling-tiled-list">
-							<a class="tile" href="https://kitsu.io/anime/suzume-no-tojimari"><img class="tile-image" src="https://media.kitsu.io/anime/45597/poster_image/large-f6967ba3fb60478606925e7122373aba.jpeg" alt="Suzume"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/jujutsu-kaisen-movie-0"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44212/large.jpg" alt="Jujutsu Kaisen 0 Movie"></img></a>							
+							<a class="tile" href="https://kitsu.io/anime/suzume-no-tojimari"><img class="tile-image" src="https://media.kitsu.io/anime/45597/poster_image/large-f6967ba3fb60478606925e7122373aba.jpeg" alt="Suzume"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/boku-no-hero-academia-the-movie-3"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/44209/large.jpg" alt="My Hero Academia the Movie 3: World Heroes' Mission"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/tenki-no-ko-weathering-with-you"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/42028/large.jpg?1597696900" alt="Weathering With You"></img></a>					
 							<a class="tile" href="https://kitsu.io/anime/violet-evergarden-movie"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/41450/large.jpg?1597696766" alt=" Violet Evergarden the Movie"></img></a>
@@ -117,31 +116,28 @@
 						<h2 class="section-heading">Binge Watching</h2>
 						<h3 class="section-subheading">Backlog Bingeing</h3> 
 						<div class="tiled-list scrolling-tiled-list">																	
-							<a class="tile" href="https://kitsu.io/anime/nichijou"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/6062/large.jpg?1597696783" alt="Nichijou"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/chuunibyou-demo-koi-ga-shitai"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/7160/large.jpg?1597699260" alt="Love, Chunibyo & Other Delusions!"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/koi-wa-ameagari-no-you-ni"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/13277/large.jpg?1597697509" alt="After the Rain"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/anohana-the-flower-we-saw-that-day"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/5981/large.jpg?1597696751" alt="Anohana: The Flower We Saw That Day"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/shirobako"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/8698/large.jpg?1597696859" alt="Shirobako"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/3-gatsu-no-lion"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/11380/large.jpg?1597696842" alt="March comes in like a lion"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/made-in-abyss-retsujitsu-no-ougonkyou"><img class="tile-image" src="https://media.kitsu.io/anime/42951/poster_image/large-8fd6abf81d8c4223a61bd0e4192eba04.jpeg" alt="Made in Abyss: The Golden City of the Scorching Sun"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/mob-psycho-100-iii"><img class="tile-image" src="https://media.kitsu.io/anime/45338/poster_image/large-b7ba28948da84b740c9ae7882b365fb9.jpeg" alt="Mob Psycho 100 III"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/nichijou"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/6062/large.jpg?1597696783" alt="Nichijou"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/chuunibyou-demo-koi-ga-shitai"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/7160/large.jpg?1597699260" alt="Love, Chunibyo & Other Delusions!"></img></a>							
+							<a class="tile" href="https://kitsu.io/anime/anohana-the-flower-we-saw-that-day"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/5981/large.jpg?1597696751" alt="Anohana: The Flower We Saw That Day"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/shirobako"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/8698/large.jpg?1597696859" alt="Shirobako"></img></a>														
 							<a class="tile" href="https://kitsu.io/anime/chihayafuru"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/6355/large.jpg" alt="Chihayafuru"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/shokugeki-no-souma-gou-no-sara"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/42921/large.jpg" alt="Shokugeki no Souma: Gou no Sara"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/kaguya-sama-wa-kokurasetai-tensai-tachi-no-renai-zunousen-3"><img class="tile-image" src="https://media.kitsu.io/anime/43691/poster_image/large-a15d02d0a6e4df6aab71c361bcb477af.jpeg" alt="Kaguya-sama: Love is War - Ultra Romantic"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/natsume-yuujinchou"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/3453/large.jpg" alt="Natsume's Book of Friends"></img></a>							
-							<a class="tile" href="https://kitsu.io/anime/made-in-abyss-retsujitsu-no-ougonkyou"><img class="tile-image" src="https://media.kitsu.io/anime/42951/poster_image/large-8fd6abf81d8c4223a61bd0e4192eba04.jpeg" alt="Made in Abyss: The Golden City of the Scorching Sun"></img></a>							
-							<a class="tile" href="https://kitsu.io/anime/mob-psycho-100-iii"><img class="tile-image" src="https://media.kitsu.io/anime/45338/poster_image/large-b7ba28948da84b740c9ae7882b365fb9.jpeg" alt="Mob Psycho 100 III"></img></a>						
+							<a class="tile" href="https://kitsu.io/anime/koi-wa-ameagari-no-you-ni"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/13277/large.jpg?1597697509" alt="After the Rain"></img></a>
 						</div><!-- tiled-list -->
 
 						<h3 class="section-subheading">Waiting for Dub to Finish</h3> 
 						<div class="tiled-list scrolling-tiled-list">
 							<a class="tile" href="https://kitsu.io/anime/a-place-further-than-the-universe"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/13615/large.jpg?1597696818" alt="A Place Further Than the Universe"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/yuru-camp-2"><img class="tile-image" src="https://media.kitsu.io/anime/41976/poster_image/large-088cc24535de233601c8b9b83cf09bde.jpeg" alt="Laid-Back Camp 2"></img></a>														
-							<a class="tile" href="https://kitsu.io/anime/karakai-jouzu-no-takagi-san-2"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/42110/large.jpg" alt="Teasing Master Takagi-san 2"></img></a>							
-							<a class="tile" href="https://kitsu.io/anime/vinland-saga-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/44875/poster_image/large-c91906d83db833c1dad74f7ced0ada7b.jpeg" alt="Vinland Saga Season 2"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/karakai-jouzu-no-takagi-san-2"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/42110/large.jpg" alt="Teasing Master Takagi-san 2"></img></a>														
 							<a class="tile" href="https://kitsu.io/anime/mahoutsukai-no-yome-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/46436/poster_image/large-4143acc41341b91804009d0e7508dc60.jpeg" alt="The Ancient Magus' Bride Season 2"></img></a>							
-							<a class="tile" href="https://kitsu.io/anime/ousama-ranking-yuuki-no-takarabako"><img class="tile-image" src="https://media.kitsu.io/anime/46317/poster_image/large-4604d11f71b9652e9f39ef679a3484a5.jpeg" alt="Ranking of Kings: Treasure Chest of Courage"></img></a>							
-							<a class="tile" href="https://kitsu.io/anime/my-home-hero"><img class="tile-image" src="https://media.kitsu.io/anime/46209/poster_image/large-e6ed88832d387593e867b7bd44091c81.jpeg" alt="My Home Hero"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/tengoku-daimakyou"><img class="tile-image" src="https://media.kitsu.io/anime/46641/poster_image/large-a26b99328f29c31db60ba7201ebeb446.jpeg" alt="Heavenly Delusion"></img></a>														
-							<a class="tile" href="https://kitsu.io/anime/oshi-no-ko"><img class="tile-image" src="https://media.kitsu.io/anime/46170/poster_image/large-0bad1050afcf9e5320ca46bf17ac007a.jpeg" alt="OSHI NO KO"></img></a>																				
+							<a class="tile" href="https://kitsu.io/anime/ousama-ranking-yuuki-no-takarabako"><img class="tile-image" src="https://media.kitsu.io/anime/46317/poster_image/large-4604d11f71b9652e9f39ef679a3484a5.jpeg" alt="Ranking of Kings: Treasure Chest of Courage"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/oshi-no-ko"><img class="tile-image" src="https://media.kitsu.io/anime/46170/poster_image/large-0bad1050afcf9e5320ca46bf17ac007a.jpeg" alt="OSHI NO KO"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/liar-liar"><img class="tile-image" src="https://media.kitsu.io/anime/44337/poster_image/large-63fd5a01d63deaf1bcf46310686a9f03.jpeg" alt="Liar Liar"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/sugar-apple-fairy-tale-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/47231/poster_image/large-95732c4ec596ca081b6aa4391bd97f21.jpeg" alt="Sugar Apple Fairy Tale Season 2"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/uchi-no-kaisha-no-chiisai-senpai-no-hanashi"><img class="tile-image" src="https://media.kitsu.io/anime/46647/poster_image/large-6e4c2bca546bfdf78223a42d3d579df7.jpeg" alt="My Tiny Senpai"></img></a>
@@ -153,6 +149,9 @@
 							<a class="tile" href="https://kitsu.io/anime/shinigami-bocchan-to-kuro-maid-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/45229/poster_image/large-a617890c5fcf3599bac9b58586bea1d5.jpeg" alt="The Duke of Death and His Maid Season 2"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/zom-100-zombie-ni-naru-made-ni-shitai-100-no-koto"><img class="tile-image" src="https://media.kitsu.io/anime/46954/poster_image/large-2adb6dcb745a6963b5377651868ba407.jpeg" alt="Zom 100: Bucket List of the Dead"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/shiro-seijo-to-kuro-bokushi"><img class="tile-image" src="https://media.kitsu.io/anime/46187/poster_image/large-2b99e62dd47677270d0614a412b181b4.jpeg" alt="Saint Cecilia and Pastor Lawrence"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/nanatsu-no-maken-ga-shihai-suru"><img class="tile-image" src="https://media.kitsu.io/anime/45579/poster_image/large-bd87db7025cbd2bf8a9aeb10c1e571ed.jpeg" alt="Reign of the Seven Spellblades"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/temple"><img class="tile-image" src="https://media.kitsu.io/anime/46999/poster_image/large-267cb8ed445e5b65b7baa5b125dae441.jpeg" alt="Temple"></img></a>						
+							<a class="tile" href="https://kitsu.io/anime/yamada-kun-to-lv999-no-koi-wo-suru"><img class="tile-image" src="https://media.kitsu.io/anime/46529/poster_image/large-88e6c2a6d1f806960f8fce74cfeb66fa.jpeg" alt="Loving Yamada at LV999!"></img></a>
 						</div><!-- tiled-list -->
 					</div><!-- Binge Watching -->
 					<div class="watching-item"><!--Most Anticipated-->
@@ -181,6 +180,10 @@
 							<a class="tile" href="https://kitsu.io/anime/boukensha-ni-naritai-to-miyako-ni-deteitta-musume-ga-s-rank-ni-natteta"><img class="tile-image" src="https://media.kitsu.io/anime/46690/poster_image/large-be7b5bfcc7f2c6d9c146c09981d6374a.jpeg" alt="My Daughter Left the Nest and Returned an S-Rank Adventurer"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/hikikomari-kyuuketsuki-no-monmon"><img class="tile-image" src="https://media.kitsu.io/anime/46953/poster_image/large-f9bee5752d44c8b64028e522907d7451.jpeg" alt="The Vexations of a Shut-In Vampire Princess"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/tearmoon-teikoku-monogatari-dantoudai-kara-hajimaru-hime-no-tensei-gyakuten-story"><img class="tile-image" src="https://media.kitsu.io/anime/46455/poster_image/large-18bee9d3266d7755e9a9ec757a62a79e.jpeg" alt="Tearmoon Empire"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/goblin-slayer-2nd-season"><img class="tile-image" src="https://media.kitsu.io/anime/44010/poster_image/large-96a8a0b194cbabc355380ddd320b816e.jpeg" alt="Goblin Slayer 2"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/kimi-no-koto-ga-dai-dai-dai-dai-daisuki-na-100-nin-no-kanojo"><img class="tile-image" src="https://media.kitsu.io/anime/47179/poster_image/large-5d9aaa6d45255408a3c7609c415c4031.jpeg" alt="The 100 Girlfriends Who Really Love You"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/boushoku-no-berserk"><img class="tile-image" src="https://media.kitsu.io/anime/46688/poster_image/large-cea885de2422065b9a481786cb1b5f10.jpeg" alt="Berserk of Gluttony"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/dekoboko-majo-no-oyako-jijou"><img class="tile-image" src="https://media.kitsu.io/anime/46457/poster_image/large-35e846552df3b629d55b8342e9b9dcb7.jpeg" alt="The Family Circumstances of the Unreliable Witch"></img></a>
 						</div><!-- tiled-list -->						
 
 						<h3 class="section-subheading">Later</h3> 
