--- a/index.html
+++ b/index.html
@@ -605,23 +605,29 @@
 
 			<div id="tab_linksandfollows" class="tab tab-actionable sidebar-content">
 				<div class="lf-feature">
-					<a class="lf-feature-link" href="https://www.crunchyroll.com/news/seasonal-lineup/2023/6/21/crunchyroll-summer-2023-new-anime-season">
-						<h3 class="lf-feature-title">Crunchyroll Summer 2023 Lineup!</h3>
+					<a class="lf-feature-link" href="https://www.crunchyroll.com/news/seasonal-lineup/2023/9/20/fall-anime-2023-crunchyroll">
+						<h3 class="lf-feature-title">Crunchyroll Fall 2023 Lineup!</h3>
 						<span class="lf-feature-source">Crunchyroll News</span>
-						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/Crunchyroll-Summer-2023.png"></img>
+						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/Crunchyroll-Fall-2023.jpg"></img>
 					</a>
+					<a class="lf-feature-link" href="https://twitter.com/rightstufanime/status/1704541397863330221?s=20">
+						<h3 class="lf-feature-title">Rascal Does Not Dream series is getting an English dub!</h3>
+						<span class="lf-feature-source">@rightstufanime</span>
+						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/Rascal-Does-Not-Dream-English-dub.jpg"></img>
+					</a>												
 					<a class="lf-feature-link" href="https://twitter.com/AIR_News01/status/1674357380413358084">
 						<h3 class="lf-feature-title">New Spice and Wolf anime scheduled for 2024</h3>
 						<span class="lf-feature-source">@AIR_News01</span>
 						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/spice_and_wolf.png"></img>
 					</a>						
-					<a class="lf-feature-link" href="https://twitter.com/AIR_News01/status/1675267088431353856">
-						<h3 class="lf-feature-title">New Panty and Stocking</h3>
-						<span class="lf-feature-source">@AIR_News01</span>
-						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/panty_and_stocking.png"></img>
-					</a>							
+
 
 					<!-- Previous Stories
+						<a class="lf-feature-link" href="https://twitter.com/AIR_News01/status/1675267088431353856">
+							<h3 class="lf-feature-title">New Panty and Stocking</h3>
+							<span class="lf-feature-source">@AIR_News01</span>
+							<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/panty_and_stocking.png"></img>
+						</a>													
 						<a class="lf-feature-link" href="https://twitter.com/AIR_News01/status/1677986337339875328">
 							<h3 class="lf-feature-title">Laid-Back Camp Season 3 scheduled for 2024</h3>
 							<span class="lf-feature-source">@AIR_News01</span>
