Fixed Images and updated content

--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
 						<h2 class="section-heading">Currently Watching</h2>
 						<div class="tiled-list scrolling-tiled-list">
 							<!-- <a class="tile" href=""><img class="tile-image" src="" alt=""></img></a> -->												
-							<a class="tile" href="https://kitsu.io/anime/mushoku-tensei-isekai-ittara-honki-dasu-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/45950/poster_image/large-625787d410bd1efd96749dc5f6bb6450.jpeg" alt="Mushoku Tensei: Jobless Reincarnation Season 2"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/sousou-no-frieren"><img class="tile-image" src="https://media.kitsu.io/anime/46474/poster_image/large-ec9b98dd5fbf8f92532d1edb45f9e882.jpeg" alt="Frieren: Beyond Journey’s End"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/shangri-la-frontier"><img class="tile-image" src="https://media.kitsu.io/anime/46241/poster_image/large-932c88032c14cb5ebcad1375ab1289e6.jpeg" alt="Shangri-La Frontier"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/jujutsu-kaisen-2"><img class="tile-image" src="https://media.kitsu.io/anime/45857/poster_image/large-1ebb56f346edda6bcde9cdffa9b89316.jpeg" alt="Jujutsu Kaisen Season 2"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/kanojo-okarishimasu-3rd-season"><img class="tile-image" src="https://media.kitsu.io/anime/46489/poster_image/large-592dd72d0bf4cf4096374bd52b0a76a1.jpeg" alt="Rent-a-Girlfriend Season 3"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/horimiya-piece"><img class="tile-image" src="https://media.kitsu.io/anime/47234/poster_image/large-e447f5ac2db9b859bb0d88661434caf7.jpeg" alt="Horimiya -piece-"></img></a>														
+							<a class="tile" href="https://kitsu.io/anime/horimiya-piece"><img class="tile-image" src="https://media.kitsu.io/anime/47234/poster_image/large-e447f5ac2db9b859bb0d88661434caf7.jpeg" alt="Horimiya -piece-"></img></a>
 						</div><!-- tiled-list -->
 					</div><!-- Currently Watching-->			
 
@@ -127,6 +127,10 @@
 							<a class="tile" href="https://kitsu.io/anime/kaguya-sama-wa-kokurasetai-tensai-tachi-no-renai-zunousen-3"><img class="tile-image" src="https://media.kitsu.io/anime/43691/poster_image/large-a15d02d0a6e4df6aab71c361bcb477af.jpeg" alt="Kaguya-sama: Love is War - Ultra Romantic"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/natsume-yuujinchou"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/3453/large.jpg" alt="Natsume's Book of Friends"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/koi-wa-ameagari-no-you-ni"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/13277/large.jpg?1597697509" alt="After the Rain"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/ousama-ranking-yuuki-no-takarabako"><img class="tile-image" src="https://media.kitsu.io/anime/46317/poster_image/large-4604d11f71b9652e9f39ef679a3484a5.jpeg" alt="Ranking of Kings: Treasure Chest of Courage"></img></a>							
+							<a class="tile" href="https://kitsu.io/anime/sugar-apple-fairy-tale-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/47231/poster_image/large-95732c4ec596ca081b6aa4391bd97f21.jpeg" alt="Sugar Apple Fairy Tale Season 2"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/uchi-no-kaisha-no-chiisai-senpai-no-hanashi"><img class="tile-image" src="https://media.kitsu.io/anime/46647/poster_image/large-6e4c2bca546bfdf78223a42d3d579df7.jpeg" alt="My Tiny Senpai"></img></a>							
+							<a class="tile" href="https://kitsu.io/anime/shinigami-bocchan-to-kuro-maid-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/45229/poster_image/large-a617890c5fcf3599bac9b58586bea1d5.jpeg" alt="The Duke of Death and His Maid Season 2"></img></a>							
 						</div><!-- tiled-list -->
 
 						<h3 class="section-subheading">Waiting for Dub to Finish</h3> 
@@ -134,17 +138,9 @@
 							<a class="tile" href="https://kitsu.io/anime/a-place-further-than-the-universe"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/13615/large.jpg?1597696818" alt="A Place Further Than the Universe"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/yuru-camp-2"><img class="tile-image" src="https://media.kitsu.io/anime/41976/poster_image/large-088cc24535de233601c8b9b83cf09bde.jpeg" alt="Laid-Back Camp 2"></img></a>														
 							<a class="tile" href="https://kitsu.io/anime/karakai-jouzu-no-takagi-san-2"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/42110/large.jpg" alt="Teasing Master Takagi-san 2"></img></a>														
-							<a class="tile" href="https://kitsu.io/anime/mahoutsukai-no-yome-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/46436/poster_image/large-4143acc41341b91804009d0e7508dc60.jpeg" alt="The Ancient Magus' Bride Season 2"></img></a>							
-							<a class="tile" href="https://kitsu.io/anime/ousama-ranking-yuuki-no-takarabako"><img class="tile-image" src="https://media.kitsu.io/anime/46317/poster_image/large-4604d11f71b9652e9f39ef679a3484a5.jpeg" alt="Ranking of Kings: Treasure Chest of Courage"></img></a>							
-							<a class="tile" href="https://kitsu.io/anime/sugar-apple-fairy-tale-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/47231/poster_image/large-95732c4ec596ca081b6aa4391bd97f21.jpeg" alt="Sugar Apple Fairy Tale Season 2"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/uchi-no-kaisha-no-chiisai-senpai-no-hanashi"><img class="tile-image" src="https://media.kitsu.io/anime/46647/poster_image/large-6e4c2bca546bfdf78223a42d3d579df7.jpeg" alt="My Tiny Senpai"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/jitsu-wa-ore-saikyou-deshita"><img class="tile-image" src="https://media.kitsu.io/anime/46456/poster_image/large-fccd170d71e16e04e62feb58b28d93fc.jpeg" alt="Am I Actually the Strongest?"></img></a>							
-							<a class="tile" href="https://kitsu.io/anime/bleach-sennen-kessen-hen-ketsubetsutan"><img class="tile-image" src="https://media.kitsu.io/anime/46903/poster_image/large-fb66e30ae4cf5359e85a8f05b9f6ee3b.jpeg" alt="BLEACH: Thousand Year Blood War - The Separation"></img></a>							
-							<a class="tile" href="https://kitsu.io/anime/shinigami-bocchan-to-kuro-maid-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/45229/poster_image/large-a617890c5fcf3599bac9b58586bea1d5.jpeg" alt="The Duke of Death and His Maid Season 2"></img></a>							
+							<a class="tile" href="https://kitsu.io/anime/mahoutsukai-no-yome-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/46436/poster_image/large-4143acc41341b91804009d0e7508dc60.jpeg" alt="The Ancient Magus' Bride Season 2"></img></a>														
+							<a class="tile" href="https://kitsu.io/anime/bleach-sennen-kessen-hen-ketsubetsutan"><img class="tile-image" src="https://media.kitsu.io/anime/46903/poster_image/large-fb66e30ae4cf5359e85a8f05b9f6ee3b.jpeg" alt="BLEACH: Thousand Year Blood War - The Separation"></img></a>														
 							<a class="tile" href="https://kitsu.io/anime/zom-100-zombie-ni-naru-made-ni-shitai-100-no-koto"><img class="tile-image" src="https://media.kitsu.io/anime/46954/poster_image/large-2adb6dcb745a6963b5377651868ba407.jpeg" alt="Zom 100: Bucket List of the Dead"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/shiro-seijo-to-kuro-bokushi"><img class="tile-image" src="https://media.kitsu.io/anime/46187/poster_image/large-2b99e62dd47677270d0614a412b181b4.jpeg" alt="Saint Cecilia and Pastor Lawrence"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/nanatsu-no-maken-ga-shihai-suru"><img class="tile-image" src="https://media.kitsu.io/anime/45579/poster_image/large-bd87db7025cbd2bf8a9aeb10c1e571ed.jpeg" alt="Reign of the Seven Spellblades"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/temple"><img class="tile-image" src="https://media.kitsu.io/anime/46999/poster_image/large-267cb8ed445e5b65b7baa5b125dae441.jpeg" alt="Temple"></img></a>						
 							<a class="tile" href="https://kitsu.io/anime/yamada-kun-to-lv999-no-koi-wo-suru"><img class="tile-image" src="https://media.kitsu.io/anime/46529/poster_image/large-88e6c2a6d1f806960f8fce74cfeb66fa.jpeg" alt="Loving Yamada at LV999!"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/boku-no-kokoro-no-yabai-yatsu"><img class="tile-image" src="https://media.kitsu.io/anime/46299/poster_image/large-116b49ab958abf27bbbb38e9215a0fe1.jpeg" alt="The Dangers in My Heart"></img></a>
 						</div><!-- tiled-list -->
@@ -163,9 +159,8 @@
 						<div class="tiled-list scrolling-tiled-list">																																												
 							<a class="tile" href="https://kitsu.io/anime/spy-x-family-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/46873/poster_image/large-4ab0dfd986e7d12f94fb3ca6f1cb4bbe.jpeg" alt="SPY×FAMILY Season 2"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/shingeki-no-kyojin-the-final-season-part-4"><img class="tile-image" src="https://media.kitsu.io/anime/47132/poster_image/large-598e9e524a14ed67c6ba18dae0d58a96.jpeg" alt="Attack on Titan: The Final Season Part 4"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/saihate-no-paladin-2"><img class="tile-image" src="https://media.kitsu.io/anime/45657/poster_image/large-3a06a6460e9fdf45c173135b4025e66a.jpeg" alt="The Faraway Paladin Season 2"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/sousou-no-frieren"><img class="tile-image" src="https://media.kitsu.io/anime/46474/poster_image/large-ec9b98dd5fbf8f92532d1edb45f9e882.jpeg" alt="Frieren: Beyond Journey’s End"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/dr-stone-new-world-part-2"><img class="tile-image" src="https://media.kitsu.io/anime/47246/poster_image/large-4be5d390d1dabe3e5b8977816a4dfa18.jpeg" alt="Dr.STONE: NEW WORLD Part 2"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/saihate-no-paladin-2"><img class="tile-image" src="https://media.kitsu.io/anime/45657/poster_image/large-3a06a6460e9fdf45c173135b4025e66a.jpeg" alt="The Faraway Paladin Season 2"></img></a>							
+							<a class="tile" href="https://kitsu.io/anime/dr-stone-new-world-part-2"><img class="tile-image" src="https://media.kitsu.io/anime/47246/poster_image/large-ad96004b461eb6dc3df287dcd6f48a0e.jpeg" alt="Dr.STONE: NEW WORLD Part 2"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/undead-unluck"><img class="tile-image" src="https://media.kitsu.io/anime/46415/poster_image/large-3ebf131a16accab9cfe44ffdd208eb19.jpeg" alt="Undead Unluck"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/kusuriya-no-hitorigoto"><img class="tile-image" src="https://media.kitsu.io/anime/47083/poster_image/large-74f34116934722c262866e8956e36b90.jpeg" alt="The Apothecary Diaries"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/kanojo-mo-kanojo-2nd-season"><img class="tile-image" src="https://media.kitsu.io/anime/46486/poster_image/large-3e6b7d4f10ff65078fa84621ed59b0ee.jpeg" alt="Kanojo mo Kanojo 2"></img></a>
