--- a/index.html
+++ b/index.html
@@ -243,17 +243,24 @@
 							<div class="card-tiled-list">
 								<a class="tile" href="https://kitsu.io/anime/fate-zero"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Fate-Zero_large.jpg" alt="Fate Zero"></img></a>
 								<a class="tile" href="https://kitsu.io/anime/one-punch-man"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/One-Punch-Man_large.jpg" alt="One-Punch Man"></img></a>
-								<a class="tile" href="https://kitsu.io/anime/attack-on-titan"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Attack-on-Titan_large.jpg" alt="Attack on Titan"></img></a>
+								<a class="tile" href="https://kitsu.io/anime/shangri-la-frontier"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Shangri-La-Frontier_Large.jpeg" alt="Shangri-La Frontier"></img></a>
 								<a class="tile" href="https://kitsu.io/anime/mob-psycho-100"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Mob-Psycho-100_large.jpeg" alt="Mob Psycho 100"></img></a>								
+								<!--
+									<a class="tile" href=""><img  loading="Lazy" class="tile-image" src="" alt=""></img></a>
+									<a class="tile" href="https://kitsu.io/anime/attack-on-titan"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Attack-on-Titan_large.jpg" alt="Attack on Titan"></img></a>
+								-->
 							</div>
 						</div><!--Action-->
 						<div class="tiled-list-card">
 							<h4 class="tile-card-heading">Adventure</h4>
 							<div class="card-tiled-list">
 								<a class="tile" href="https://kitsu.io/anime/vinland-saga"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Vinland-Saga_large.jpg" alt="Vinland Saga"></img></a>
+								<a class="tile" href="https://kitsu.io/anime/sousou-no-frieren"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Frieren_Large.jpeg" alt="Frieren"></img></a>
 								<a class="tile" href="https://kitsu.io/anime/dororo"><img class="tile-image" src="assets/images/thumbnails/Posters/Dororo_large.jpg" alt="Dororo"></img></a>
-								<a class="tile" href="https://kitsu.io/anime/seirei-no-moribito"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Moribito_large.jpg" alt="Moribito"></img></a>
-								<a class="tile" href="https://kitsu.io/anime/arslan-senki-tv"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/The-Heroic-Legend-of-Arslan_large.jpg" alt="The Heroic Legend of Arslan"></img></a>
+								<a class="tile" href="https://kitsu.io/anime/seirei-no-moribito"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Moribito_large.jpg" alt="Moribito"></img></a>								
+								<!--
+									<a class="tile" href="https://kitsu.io/anime/arslan-senki-tv"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/The-Heroic-Legend-of-Arslan_large.jpg" alt="The Heroic Legend of Arslan"></img></a>
+								-->
 							</div>
 						</div><!--Adventure-->
 						<div class="tiled-list-card">
@@ -261,8 +268,11 @@
 							<div class="card-tiled-list">						
 								<a class="tile" href="https://kitsu.io/anime/saiki-kusuo-no-psi-nan-tv"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Saiki-K_large.jpg" alt="The Disastrous Life of Saiki K."></img></a>
 								<a class="tile" href="https://kitsu.io/anime/space-dandy"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Space-Dandy_large.jpg" alt="Space Dandy"></img></a>
-								<a class="tile" href="https://kitsu.io/anime/the-devil-is-a-part-timer"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Devil-is-a-Part-Timer_large.jpg" alt="The Devil is a Part-Timer!"></img></a>
+								<a class="tile" href="https://kitsu.io/anime/gokushufudou"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/The-Way-of-the-Househusband_Large.jpg" alt="The Way of the Househusband"></img></a>
 								<a class="tile" href="https://kitsu.io/anime/hinamatsuri"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Hinamatsuri_large.jpg" alt="HINAMATSURI"></img></a>
+								<!--									
+									<a class="tile" href="https://kitsu.io/anime/the-devil-is-a-part-timer"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Devil-is-a-Part-Timer_large.jpg" alt="The Devil is a Part-Timer!"></img></a>
+								-->
 							</div>	
 						</div><!--Comedy-->			
 						<div class="tiled-list-card">
@@ -327,10 +337,11 @@
 							<h4 class="tile-card-heading">Romance</h4>
 							<div class="card-tiled-list">		
 								<a class="tile" href="https://kitsu.io/anime/horimiya"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Horimiya_large.jpg" alt="Horimiya"></img></a>
+								<a class="tile" href="https://kitsu.io/anime/kaguya-sama-wa-kokurasetai-tensai-tachi-no-renai-zunousen"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Kaguya-sama_Large.jpg" alt="Kaguya-sama: Love is War"></img></a>
 								<a class="tile" href="https://kitsu.io/anime/tonikaku-kawaii"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Over-the-Moon-For-You_large.jpg" alt="TONIKAWA: Over the Moon For You"></img></a>
-								<a class="tile" href="https://kitsu.io/anime/gekkan-shoujo-nozaki-kun"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Monthly-Girls'-Nozaki-kun_large.jpg" alt="Monthly Girls' Nozaki-kun"></img></a>
 								<a class="tile" href="https://kitsu.io/anime/5-toubun-no-hanayome"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Quintessential-Quintuplets_large.jpg" alt="The Quintessential Quintuplets"></img></a>
-								<!--
+								<!--									
+									<a class="tile" href="https://kitsu.io/anime/gekkan-shoujo-nozaki-kun"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Monthly-Girls'-Nozaki-kun_large.jpg" alt="Monthly Girls' Nozaki-kun"></img></a>
 									<a class="tile" href="https://kitsu.io/anime/kanojo-okarishimasu"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/43028/large.jpg?1597697493" alt="Rent-a-Girlfriend"></img></a>
 									<a class="tile" href="https://kitsu.io/anime/toradora"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/3532/large.jpg?1458499777" alt="Toradora!"></img></a>
 									<a class="tile" href="https://kitsu.io/anime/yahari-ore-no-seishun-love-comedy-wa-machigatteiru"><img class="tile-image" src="assets/images/thumbnails/Posters/My-Teen-Romantic-Comedy-SNAFU_large.jpg" alt="My Teen Romantic Comedy SNAFU"></img></a>
@@ -543,6 +554,7 @@
 						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/Eq6EYcpWB_c"><span class="OP_ED-anime">Samurai Champloo,</span><span class="OP_ED-title">"Battlecry" by Nujabes feat. Shing02</span></a></div>						
 						<div class="OP_ED-item"><a class="OP_ED-header-link" href="https://youtu.be/EzGs8Tm_C2g"><span class="OP_ED-anime">SPY x FAMILY,</span><span class="OP_ED-title">"Mixed Nuts" by Official Hige Dandism</span></a></div>						
 						<button onclick="more_OP_ED_item_op_btn()" id="more_OP_ED_item_op_btn" class="btn-pill-full-width">Show more</button>
+						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/-jGBp5HBLFs?si=JESKb5t0MDdzNmTW"><span class="OP_ED-anime">Frieren,</span><span class="OP_ED-title">"Yuusha" by YOASOBI</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/XcuJeUtFUbA"><span class="OP_ED-anime">Shadow House 2,</span><span class="OP_ED-title">"Shall We Dance?" by ReoNa</span></a></div>						
 						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/4J8jcI0WtzM"><span class="OP_ED-anime">Blood Blockade Battlefront,</span><span class="OP_ED-title">"Hello,world!" by Bump of Chicken</span></a></div>						
 						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/6CBp4qylX6I"><span class="OP_ED-anime">No Game No Life,</span><span class="OP_ED-title">"This Game" by Konomi Suzuki</span></a></div>
@@ -563,6 +575,10 @@
 						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/MN_WgwEmRaw"><span class="OP_ED-anime">Spice and Wolf,</span><span class="OP_ED-title">"Tabi no Tochuu" by Natsumi Kiyoura</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/82mm5JvJOmo"><span class="OP_ED-anime">Flying Witch,</span><span class="OP_ED-title">"Shanranran" by Miwa Feat 96 Neko</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href="https://youtu.be/-eYK3YP524A"><span class="OP_ED-anime">Soul Eater,</span><span class="OP_ED-title">"Papermoon" by Tommy Heavenly6</span></a></div>
+
+						<!--
+							<div class="OP_ED-item more-OP_ED-item-op"><a class="OP_ED-header-link" href=""><span class="OP_ED-anime">,</span><span class="OP_ED-title">"" by </span></a></div>
+						-->
 					</div><!--OPs-->
 					
 					<div class="favorite-item"><!--EDs-->
@@ -578,6 +594,7 @@
 						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/o05UK9lXtC0"><span class="OP_ED-anime">Attack on Titan Season 3,</span><span class="OP_ED-title">"Requiem der Morgenröte" by Linked Horizon</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/2bm2WmWiohw"><span class="OP_ED-anime">Kobayashi's Dragon Maid,</span><span class="OP_ED-title">"Hukan Communication" by Yuki Kuwahara</span></a></div>					
 						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/TERi1b3ISdk"><span class="OP_ED-anime">Restaurant to Another World Season 2,</span><span class="OP_ED-title">"Samenai Mahou" by Nao Toyama</span></a></div>
+						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/7pmd0kt3FOs?si=xXPabPHSm77tUwJI"><span class="OP_ED-anime">Frieren,</span><span class="OP_ED-title">"Anytime Anywhere" by Milet</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/KtsvxCnJBLs"><span class="OP_ED-anime">Skeleton Knight in Another World,</span><span class="OP_ED-title">"Bokura ga Oroka da Nante Dare ga Itta" by Dialogue+</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/gIGEbitYqL0"><span class="OP_ED-anime">Re:Zero,</span><span class="OP_ED-title">"Styx Helix" by Myth and Roid</span></a></div>
 						<div class="OP_ED-item more-OP_ED-item-ed"><a class="OP_ED-header-link" href="https://youtu.be/VneknudkhAk"><span class="OP_ED-anime">Log Horizon Season 2,</span><span class="OP_ED-title">"Wonderful Wonder World" by Yun*chi</span></a></div>
