--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
 							<a class="tile" href="https://kitsu.io/anime/karakai-jouzu-no-takagi-san-2"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/42110/large.jpg" alt="Teasing Master Takagi-san 2"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/rurouni-kenshin-meiji-kenkaku-romantan-2023"><img class="tile-image" src="https://media.kitsu.io/anime/45616/poster_image/large-1881293614632c347d895db0315419a7.jpeg" alt="Rurouni Kenshin"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/kusuriya-no-hitorigoto"><img class="tile-image" src="https://media.kitsu.io/anime/47083/poster_image/large-74f34116934722c262866e8956e36b90.jpeg" alt="The Apothecary Diaries"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/kimi-ni-todoke"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/4397/large.jpg" alt="Kimi ni Todoke: From Me to You"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/dark-gathering"><img class="tile-image" src="https://media.kitsu.io/anime/46279/poster_image/large-7f454e242f8934b587b4724d75f5e6f0.jpeg" alt="Dark Gathering"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/undead-unluck"><img class="tile-image" src="https://media.kitsu.io/anime/46415/poster_image/large-3ebf131a16accab9cfe44ffdd208eb19.jpeg" alt="Undead Unluck"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/chiyu-mahou-no-machigatta-tsukaikata-senjou-wo-kakeru-kaifuku-youin"><img class="tile-image" src="https://media.kitsu.io/anime/44981/poster_image/large-4bf6166c44f4cfd702f990d6208f72f8.jpeg" alt="The Wrong Way to use Healing Magic"></img></a>														
@@ -162,6 +163,7 @@
 							<a class="tile" href="https://kitsu.io/anime/bucchigiri-tv"><img class="tile-image" src="https://media.kitsu.io/anime/47469/poster_image/large-564e5e24dbfd39cf3059b3f0bbbf67b1.jpeg" alt="BUCCHIGIRI?!"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/shin-no-nakama-ja-nai-to-yuusha-no-party-wo-oidasareta-node-henkyou-de-slow-life-suru-koto-ni-shimashita-2nd-season"><img class="tile-image" src="https://media.kitsu.io/anime/46686/poster_image/large-db22aa6d67fd881c9a95e216c50907b4.jpeg" alt="Banished from the Hero’s Party 2"></img></a>														
 							<a class="tile" href="https://kitsu.io/anime/sokushi-cheat-ga-saikyou-sugite-isekai-no-yatsura-ga-marude-aite-ni-naranai-n-desu-ga"><img class="tile-image" src="https://media.kitsu.io/anime/46807/poster_image/large-b6a293c41394ac46a07c222709bb59b1.jpeg" alt="My Instant Death Ability"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/lovely-complex"><img class="tile-image" src="https://media.kitsu.io/anime/1833/poster_image/large-892da306ae6f1ec03daefae58c45138b.jpeg" alt="Lovely Complex"></img></a>
 							<!--
 								<a class="tile" href="https://kitsu.io/anime/momochi-san-chi-no-ayakashi-ouji"><img class="tile-image" src="https://media.kitsu.io/anime/47751/poster_image/large-ae82edc7982f64d696ea5ae7a0dc6adf.jpeg" alt="The Demon Prince of Momochi House"></img></a>
 								<a class="tile" href="https://kitsu.io/anime/dosanko-gyaru-wa-namaramenkoi"><img class="tile-image" src="https://media.kitsu.io/anime/46663/poster_image/large-86f714bf816fa386a1d564a791705531.jpeg" alt="Hokkaido Gals Are Super Adorable!"></img></a>
@@ -194,7 +196,7 @@
 					</div><!-- Most Anticipated -->
 				
 					<div class="watching-item"><!--Please Dub -->
-						<h2 class="section-heading">Please Dub</h2>
+						<h2 class="section-heading">Please Dub!</h2>
 						<div class="tiled-list scrolling-tiled-list">												
 							<a class="tile" href="https://kitsu.io/anime/seishun-buta-yarou-wa-bunny-girl-senpai-no-yume-wo-minai"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/41056/large.jpg?1597698765" alt="Rascal Does Not Dream of Bunny Girl Senpai"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/skip-to-loafer"><img class="tile-image" src="https://media.kitsu.io/anime/45520/poster_image/large-bc121442f312da08b24f1a56e2cb2040.jpeg" alt="Skip and Loafer"></img></a>
@@ -203,17 +205,32 @@
 							<a class="tile" href="https://kitsu.io/anime/jinrui-wa-suitai-shimashita"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/6146/large.jpg?1597697141" alt="Humanity Has Declined"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/bocchi-the-rock"><img class="tile-image" src="https://media.kitsu.io/anime/44196/poster_image/large-04fc7c066e52d4d2b9d0217b383597bb.jpeg" alt="Bocchi the Rock!"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/kimi-wa-houkago-insomnia"><img class="tile-image" src="https://media.kitsu.io/anime/45746/poster_image/large-45e04c601dd80245037ab7b8ec5a0c4a.jpeg" alt="Insomniacs After School"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/kimi-ni-todoke"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/4397/large.jpg" alt="Kimi ni Todoke: From Me to You"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/kemono-no-souja-erin"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/4095/large.jpg" alt="Erin"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/kyousougiga-tv"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/7870/large.jpg" alt="Kyousougiga"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/uchouten-kazoku"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/7675/large.jpg" alt="The Eccentric Family"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/kishuku-gakkou-no-juliet"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/41065/large.jpg?1597691087" alt="Boarding School Juliet"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/5-toubun-no-hanayome-tv"><img class="tile-image" src="https://media.kitsu.io/anime/47275/poster_image/large-eb4818f7a38a5b9a6e0217e2a2a20db1.jpeg" alt="The Quintessential Quintuplets Special"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/nisekoi"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/7821/large.jpg" alt="Nisekoi: False Love"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/uchouten-kazoku"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/7675/large.jpg" alt="The Eccentric Family"></img></a>							
-							<a class="tile" href="https://kitsu.io/anime/banana-fish"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/13988/large.jpg" alt="Banana Fish"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/tondemo-skill-de-isekai-hourou-meshi"><img class="tile-image" src="https://media.kitsu.io/anime/46676/poster_image/large-ac8c77c613ea90d3282cc2b87ea4aa6e.jpeg" alt="Campfire Cooking in Another World with My Absurd Skill"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/banana-fish"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/13988/large.jpg" alt="Banana Fish"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/otonari-no-tenshisama-ni-itsunomanika-dame-ningen-ni-sareteita-Ken"><img class="tile-image" src="https://media.kitsu.io/anime/45715/poster_image/large-d863bff0eb6e0e49b30da61229bbd598.jpeg" alt="The Angel Next Door Spoils Me Rotten"></img></a>							
-							<a class="tile" href="https://kitsu.io/anime/amaama-to-inazuma"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/11870/large.jpg" alt="Sweetness & Lightning"></img></a>							
+							<a class="tile" href="https://kitsu.io/anime/amaama-to-inazuma"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/11870/large.jpg" alt="Sweetness & Lightning"></img></a>
 						</div><!-- tiled-list -->
-					</div><!-- Please Dub-->							
+					</div><!-- Please Dub-->
+
+
+					<div class="watching-item"><!--Please More Seasons! -->
+						<h2 class="section-heading">Please More Seasons!</h2>
+						<div class="tiled-list scrolling-tiled-list">												
+							<a class="tile" href="https://kitsu.io/anime/magi-the-labyrinth-of-magic"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Magi_large.jpg" alt="Magi: The Labyrinth of Magic"></img><span class="tooltip">Magi: The Labyrinth of Magic</span></a>
+							<a class="tile" href="https://kitsu.io/anime/new-game"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/New-Game_large.jpg" alt="New Game!"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/akagami-no-shirayuki-hime"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Snowwhite_large.jpg" alt="Snow White with the Red Hair"></img></a>							
+							<a class="tile" href="https://kitsu.io/anime/tonikaku-kawaii"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Over-the-Moon-For-You_large.jpg" alt="TONIKAWA: Over the Moon For You"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/shadows-house"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Shadows-House_Large.jpg" alt="Shadows House"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/honzuki-no-gekujou-shisho-ni-naru-tame-niwa-shudan-o-erandeiramasen"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Ascendance-of-a-Bookworm_large.jpg" alt="Ascendance of a Bookworm"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/demi-chan-wa-kataritai"><img  loading="Lazy" class="tile-image" src="assets/images/thumbnails/Posters/Demi-chan_large.jpg" alt="Interviews With Monster Girls"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/tondemo-skill-de-isekai-hourou-meshi"><img class="tile-image" src="https://media.kitsu.io/anime/46676/poster_image/large-ac8c77c613ea90d3282cc2b87ea4aa6e.jpeg" alt="Campfire Cooking in Another World with My Absurd Skill"></img></a>
+						</div><!-- tiled-list -->
+					</div><!-- Please More Seasons! -->					
 				</div><!-- watching -->
 				
 				<div id="tab_favorites" class="tab tab-actionable main-item">
