--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
 							<a class="tile" href="https://kitsu.io/anime/boku-no-kokoro-no-yabai-yatsu"><img class="tile-image" src="https://media.kitsu.io/anime/46299/poster_image/large-116b49ab958abf27bbbb38e9215a0fe1.jpeg" alt="The Dangers in My Heart"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/mahoutsukai-no-yome-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/46436/poster_image/large-4143acc41341b91804009d0e7508dc60.jpeg" alt="The Ancient Magus' Bride Season 2"></img></a>
 							<!--
+								<a class="tile" href="https://kitsu.io/anime/renai-flops"><img class="tile-image" src="https://media.kitsu.io/anime/46002/poster_image/large-a11e2fc22909ae0a7f53b43765c95f2f.jpeg" alt="LOVE FLOPS"></img></a>
 								<a class="tile" href="https://kitsu.io/anime/nichijou"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/6062/large.jpg?1597696783" alt="Nichijou"></img></a>
 								<a class="tile" href="https://kitsu.io/anime/chuunibyou-demo-koi-ga-shitai"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/7160/large.jpg?1597699260" alt="Love, Chunibyo & Other Delusions!"></img></a>							
 								<a class="tile" href="https://kitsu.io/anime/anohana-the-flower-we-saw-that-day"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/5981/large.jpg?1597696751" alt="Anohana: The Flower We Saw That Day"></img></a>
@@ -461,7 +462,7 @@
 							<div class="card-tiled-list">						
 								<a class="tile" href="https://myanimelist.net/character/136359/Kaguya_Shinomiya"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Kaguya-Shinomiya_large.jpg" alt="Kaguya Shinomiya"></img></a>								
 								<a class="tile" href="https://myanimelist.net/character/166439/Marin_Kitagawa"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Marin-Kitagawa_large.jpg" alt="Marin Kitagawa"></img></a>
-								<a class="tile" href="https://myanimelist.net/character/182080/Shikimori"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Shikimori_large.jpg" alt="Shikimori"></img></a>
+								<a class="tile" href="https://myanimelist.net/character/155904/Maomao"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Maomao.jpg" alt="Maomao"></img></a>
 								<a class="tile" href="https://myanimelist.net/character/123699/Takagi"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Takagi_large.jpg" alt="Takagi"></img></a>
 							</div>
 						</div><!---->		
@@ -1202,7 +1203,7 @@
 					<button onclick="show_discord_modal()" id="footer_social_discord_btn" class="bio-social-item"><i class="fa-brands fa-discord"></i></button>
 					<a href="https://github.com/heyKPerks/MyAnimeProfile" id="footer_social-github"class="footer-social-item"><i class="fa-brands fa-github"></i></a>
 				</div>
-				<p class="copyright">&copy; 2023, All right reserved</p>
+				<p class="copyright">&copy; 2024, All right reserved</p>
 			</div>
 			<!-- footer -->
 		</div><!--pagewrapper-->
